tests/paczka1/small_fuzzy/40748380.err
Error in line 4: d4FyIQk A668 84,12
Error in line 7: VbyP4 S991 *4,0
Error in line 8: VbyP4 S991 68,0
Error in line 12: d4FyIQk A668 309,9
